2006-03-01: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signature.pm: correctly handle spaces around = character
 * t/signature.t: test for spaces around = character in signature

2006-02-24: Jason Long <jlong@messiah.edu>
 * t/: wrote some tests and added them to the project
 * README, Makefile.PL: discovered additional dependency:
   Crypt::OpenSSL::Bignum
 * lib/Mail/DKIM/Signature.pm: fixed a warning that could occur if
   the h= tag was left undefined

2006-02-23: Jason Long <jlong@messiah.edu>
 * converted to ExtUtils::MakeMaker package format,
   see the dkimproxy project for revision history prior to 2006-02-23.